# takyaq

./: PyQt_frontend.py  README.md  adapters.py  base_classes.py  classes.py  correctors.py  estabilizador.py  loop.py  mocks.py  para_Alan.txt  pyproject.toml  pyqtsample.py  responders.py
docs/: loop_flow.puml
drivers/: bpc_piezo.py
drivers/ADWin/: ADwin.py  __init__.py  detector.py  piezo.py  shutters.py
drivers/camera/: ids_cam.py
drivers/piezo/: adwin_nanomax.py
frontends/: PyQt_frontend.py
samples/: pyqtsample.py
src/frontends/: PyQt_frontend.py
src/samples/: pyqtsample.py
src/takyaq/: base_classes.py  controllers.py  estabilizador.py  info_types.py  loop.py  mocks.py  stabilizer.py
src/takyaq/frontends/: PyQt_frontend.py  analyze_drift.py
takyaq/: adapters.py  base_classes.py  controllers.py  info_types.py  mocks.py  stabilizer.py
takyaq/frontends/: PyQt_frontend.py  analyze_drift.py  qt_utils.py
