[tool.poetry]
name = "takyaq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.13.1"
numba = "^0.60.0"

[tool.poetry.group.dev.dependencies]
spyder = "^5.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
